--- a/harbour-wordle.desktop
+++ b/harbour-wordle.desktop
@@ -8,3 +8,6 @@ Exec=harbour-wordle
 [X-HarbourBackup]
 BackupPathList = .local/share/harbour-wordle/
 BackupConfigList = /apps/harbour-wordle/
+
+[X-Sailjail]
+Permissions=
