--- a/harbour-wordle.desktop
+++ b/harbour-wordle.desktop
@@ -10,4 +10,4 @@ BackupPathList = .local/share/harbour-wordle/
 BackupConfigList = /apps/harbour-wordle/
 
 [X-Sailjail]
-Permissions=Sensors
+Permissions=Camera
