[wordle] Request PublicDir permission
It seems to be required for saving the game state and stats

--- a/harbour-wordle.desktop
+++ b/harbour-wordle.desktop
@@ -10,4 +10,4 @@ BackupPathList = .local/share/harbour-wordle/
 BackupConfigList = /apps/harbour-wordle/
 
 [X-Sailjail]
-Permissions=Camera
+Permissions=Camera;PublicDir
