--- a/dict/ua/Makefile
+++ b/dict/ua/Makefile
@@ -12,7 +12,9 @@ TOOL_DIR = $(TOP_DIR)/tools
 WORDLE_TOOL = $(TOOL_DIR)/wordle-tool
 
 WORDS_TXT = $(SRC_DIR)/words.txt
+XWORDS_TXT = $(SRC_DIR)/xwords.txt
 WORDS = $(OUT_DIR)/words
+XWORDS = $(OUT_DIR)/xwords
 
 all: words
 
@@ -21,6 +23,9 @@ clean:
 
 words: $(WORDLE_TOOL)
 	@$(WORDLE_TOOL) -C $(OUT_DIR) $(V) $(WORDS_TXT) $(ENC)
+
+xwords: $(WORDLE_TOOL)
+	@$(WORDLE_TOOL) -C $(OUT_DIR) $(V) -x $(XWORDS_TXT) $(ENC)
 
 $(WORDLE_TOOL): $(WORDLE_TOOL).c
 	@$(MAKE) -C $(TOOL_DIR) wordle-tool
